[package]
name = "arkflow-core"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true, features = ["rt"] }
async-trait = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
datafusion = { workspace = true }
lazy_static = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
flume = { workspace = true }
axum = { workspace = true }
num_cpus = "1.17.0"
uuid = { version = "1.10", features = ["v4"] }
object_store = { version = "0.12", features = ["aws"] }
futures-util = { workspace = true }
async-compression = { version = "0.4", features = ["tokio", "zstd"] }
lru = "0.12"
bytes = "1.7"
prometheus = "0.13"
parking_lot = "0.12"

