[package]
name = "arkflow-core"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true, features = ["rt"] }
async-trait = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
datafusion = { workspace = true }
lazy_static = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
flume = { workspace = true }
axum = { workspace = true }
uuid = { version = "1.8", features = ["v4"] }
tempfile = "3.10"
num_cpus = "1.17.0"

# Object Storage dependencies
aws-sdk-s3 = { version = "1.8", features = ["rt-tokio"] }
aws-config = { version = "1.8", features = ["behavior-version-latest"] }
azure_storage = { version = "0.20" }
azure_storage_blobs = { version = "0.20" }
google-cloud-storage = { version = "0.15", default-features = false, features = ["auth"] }
md-5 = "0.10"
base64 = "0.22"
crc32fast = "1.4"
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1.0"